dics:gin
